# TransformerTest1

./: README.md  pyproject.toml  requirements.txt
experiments/: augment_test.ipynb  transformer-test-1.ipynb
scripts/: train.py
src/data_loading/: augment_fns.py  get_data.py
src/models/: sample_augments.py  sample_models.py
src/my_project/: augment.py  augment_fns.py  augments.py  data_utils.py  forward.py  get_data.py  layers.py  loss.py  parameterize.py  sample_models.py
src/my_project/samples/: sample_augments.py  sample_models.py
src/training/: forward.py  loss.py  parameterize.py
