[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_project"
version = "0.1.0"
description = "Transformer experiments in JAX"
requires-python = ">=3.9"

dependencies = [
    "jax",
    "jaxlib",
    "optax",
    "numpy",
    "tensorflow",
    "tensorflow-datasets",
    "matplotlib",
    "tqdm",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
